<?xml version="1.0"?>
<package format="2">
  <name>ros2_planning_system_examples</name>
  <version>0.0.0</version>
  <description>The ros2_planning_system_examples</description>

  <maintainer email="ana@traclabs.com">Ana C.Huaman Quispe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_srvs</depend>
<!--  <depend>plum_plan_msgs</depend>-->
  <depend>behaviortree_cpp</depend>
  
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_msgs</depend>
  <depend>tf</depend>

  <depend>ff_msgs</depend>
</package>
